--- a/.env
+++ b/.env
@@ -9,12 +9,14 @@ GITLAB_HOSTNAME=gitlab.local
 GITLAB_ROOT_PASSWORD=ChangeMe_SuperSecret
 GITLAB_ROOT_EMAIL=root@example.com
 GITLAB_SSH_PORT=2222
+GITLAB_PUBLIC_URL=http://10.6.25.240:12345
 
 # ========== Redmine ==========
 # Redmine admin API key (create in Redmine UI once running) The one associated to the bot user
 REDMINE_API_KEY=7235fc5473c29b4988cd62a91330a4f151989f9a
 # Name of the Redmine custom field that stores the GitLab project URL
 REDMINE_GITLAB_CF=GitLab Repo
+REDMINE_PUBLIC_URL=http://10.6.25.240:12344
 
 # ========== Bridge ==========
 # GitLab personal access token with "api" scope
@@ -30,7 +32,7 @@ TRACKER0=Feature
 TRACKER1=Bug
 
 # ASP.NET env
-ASPNETCORE_ENVIRONMENT=Production
+ASPNETCORE_ENVIRONMENT=Development
 
 # ========== Bridge Database (Postgres) ==========
 BRIDGE_DB_HOST=bridge-db
